<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="mchs.neverforget.AboutActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/author_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/github_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/author_github"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/acknowledgements_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/acknowledgements"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</LinearLayout>
