<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".NeverForgetMainActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/loading_books_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:background="@color/colorGreeting" />

        <ListView
            android:id="@+id/booksListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorListView" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4.5"
        android:background="@color/colorGreeting"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_renew_selected"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="renewSelectedBooks"
            android:text="@string/nfa_renew_selected_button" />

        <Button
            android:id="@+id/button_renew_all"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="renewAllBooks"
            android:text="@string/nfa_renew_all_button" />

    </LinearLayout>

</LinearLayout>
